--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -158,12 +158,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.estimators import Estimator\n",
-    "import Pipeline.ccb.estimators\n",
+    "from Pipeline.estimator import Estimator\n",
+    "from Pipeline.ccb.estimators import cb_estimator\n",
+    "from Pipeline.cb.estimators import ips_snips\n",
     "import json\n",
     "\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|ips_snips|0'], 'random': ['ccb|ips_snips|0', 'ccb|ips_snips|0']}, online_estimator = 'ccb|ips_snips|0', window='1min')\n",
-    "baseline_preestimates = PickleFiles().init(baseline_preds.process(estimator.preestimate, path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder), process=True), procs=2)\n"
+    "ips0 = lambda: cb_estimator(ips_snips(), [0])\n",
+    "\n",
+    "estimators = {\n",
+    "    'baseline1_old': {'ips_snips_0' : ips0 },\n",
+    "    'random': {'ips_snips_0': ips0 } }\n",
+    "online_estimator = ips0\n",
+    "    \n",
+    "estimator = Estimator(\n",
+    "    estimators = estimators, \n",
+    "    online_estimator = online_estimator,\n",
+    "    window='1min')\n",
+    "\n",
+    "baseline_preestimates = PickleFiles().init(\n",
+    "    baseline_preds.process(\n",
+    "        estimator.preestimate,\n",
+    "        path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder),\n",
+    "        process=True),\n",
+    "    procs=2)\n"
    ]
   },
   {
@@ -189,10 +206,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['online'] = df.apply(lambda r: r[\"('online', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)\n",
-    "df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['l'], axis = 1)\n",
-    "df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['u'], axis = 1)\n",
-    "df[('random', 'e')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)"
+    "df['online'] = df.apply(lambda r: r['online'].get('ips')['e'], axis = 1)\n",
+    "df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ips_snips_0')\"].get('gaussian')['l'], axis = 1)\n",
+    "df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ips_snips_0')\"].get('gaussian')['u'], axis = 1)\n",
+    "df[('random', 'e')] = df.apply(lambda r: r[\"('random', 'ips_snips_0')\"].get('ips')['e'], axis = 1)"
    ]
   },
   {
