--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -32,6 +32,7 @@
     "predict_folder = local_data_root.joinpath('predict.pickle')\n",
     "baseline_predict_folder = local_data_root.joinpath('baseline.predict')\n",
     "baseline_estimate_folder = local_data_root.joinpath('baseline.estimate')\n",
+    "baseline_old_estimate_folder = local_data_root.joinpath('baseline.old.estimate')\n",
     "cfe_estimate_folder = local_data_root.joinpath('cfe.estimate')"
    ]
   },
@@ -149,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preestimate"
+    "# Estimate"
    ]
   },
   {
@@ -163,24 +164,55 @@
     "from Pipeline.cb.estimators import ips_snips\n",
     "import json\n",
     "\n",
-    "ips0 = lambda: cb_estimator(ips_snips(), [0])\n",
+    "ips = lambda: cb_estimator(ips_snips)\n",
     "\n",
     "estimators = {\n",
-    "    'baseline1_old': {'ips_snips_0' : ips0 },\n",
-    "    'random': {'ips_snips_0': ips0 } }\n",
-    "online_estimator = ips0\n",
+    "    'baseline1_old': {'ips_snips' : ips },\n",
+    "    'random': {'ips_snips': ips } }\n",
+    "online_estimator = ips\n",
     "    \n",
     "estimator = Estimator(\n",
     "    estimators = estimators, \n",
     "    online_estimator = online_estimator,\n",
     "    window='1min')\n",
     "\n",
-    "baseline_preestimates = PickleFiles().init(\n",
+    "baseline_estimates = PickleFiles().init(\n",
     "    baseline_preds.process(\n",
-    "        estimator.preestimate,\n",
+    "        estimator.estimate,\n",
     "        path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder),\n",
     "        process=True),\n",
-    "    procs=2)\n"
+    "    procs=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Pipeline.estimator import Estimator\n",
+    "from Pipeline.ccb.estimators import cb_estimator_old\n",
+    "from Pipeline.cb.estimators import ips_snips_old\n",
+    "import json\n",
+    "\n",
+    "ips = lambda: cb_estimator_old(ips_snips_old(), [0])\n",
+    "\n",
+    "estimators = {\n",
+    "    'baseline1_old': {'ips_snips' : ips },\n",
+    "    'random': {'ips_snips': ips } }\n",
+    "online_estimator = ips\n",
+    "    \n",
+    "estimator = Estimator(\n",
+    "    estimators = estimators, \n",
+    "    online_estimator = online_estimator,\n",
+    "    window='1min')\n",
+    "\n",
+    "baseline_estimates_old = PickleFiles().init(\n",
+    "    baseline_preds.process(\n",
+    "        estimator.estimate,\n",
+    "        path_gen=Mapper(baseline_predict_folder, baseline_old_estimate_folder),\n",
+    "        process=True),\n",
+    "    procs=1)\n"
    ]
   },
   {
@@ -196,7 +228,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = baseline_preestimates.open().resample('2min').sum()\n",
+    "df_old = baseline_estimates_old.open().resample('2min').sum()\n",
+    "df_old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = baseline_estimates.open().resample('2min').sum()\n",
     "df"
    ]
   },
@@ -206,10 +248,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['online'] = df.apply(lambda r: r['online'].get('ips')['e'], axis = 1)\n",
-    "df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ips_snips_0')\"].get('gaussian')['l'], axis = 1)\n",
-    "df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ips_snips_0')\"].get('gaussian')['u'], axis = 1)\n",
-    "df[('random', 'e')] = df.apply(lambda r: r[\"('random', 'ips_snips_0')\"].get('ips')['e'], axis = 1)"
+    "first_only = lambda i,s: int(i == 0)\n",
+    "df['online'] = df.apply(lambda r: r['online'].get(weights=first_only, type='ips'), axis = 1)\n",
+    "#df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ips_snips')\"].get(slots=[0], type='gaussian')['l'], axis = 1)\n",
+    "#df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ips_snips')\"].get(slots=[0], type='gaussian')['u'], axis = 1)\n",
+    "df[('random', 'e')] = df.apply(lambda r: r[\"('random', 'ips_snips')\"].get(weights=first_only, type='ips'), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_old['online'] = df_old.apply(lambda r: r['online'].get(type='ips')['e'], axis = 1)\n",
+    "#df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ips_snips')\"].get(slots=[0], type='gaussian')['l'], axis = 1)\n",
+    "#df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ips_snips')\"].get(slots=[0], type='gaussian')['u'], axis = 1)\n",
+    "df_old[('random', 'e')] = df_old.apply(lambda r: r[\"('random', 'ips_snips')\"].get(type='ips')['e'], axis = 1)"
    ]
   },
   {
@@ -226,7 +281,24 @@
     "fig, ax = plt.subplots(dpi=100, figsize=[16, 6])\n",
     "\n",
     "ax.plot(df.index, df['online'], label='online')\n",
-    "ax.fill_between(df.index, df[('random', 'l')], df[('random', 'u')], alpha = .1)"
+    "#ax.fill_between(df.index, df[('random', 'l')], df[('random', 'u')], alpha = .1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "register_matplotlib_converters()\n",
+    "fig, ax = plt.subplots(dpi=100, figsize=[16, 6])\n",
+    "\n",
+    "ax.plot(df_old.index, df_old['online'], label='online')\n",
+    "#ax.fill_between(df.index, df[('random', 'l')], df[('random', 'u')], alpha = .1)"
    ]
   },
   {
