VwPipeline -> vw_pipeline

--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -10,13 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.6"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
-   "display_name": "Python 3.8.5 64-bit",
-   "language": "python"
+   "display_name": "Python 3.8.6 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
@@ -35,19 +39,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from VwPipeline import Loggers, Handlers\n",
-    "from VwPipeline.VwCache import VwCache\n",
-    "from VwPipeline.Vw import Vw\n",
-    "from VwPipeline.VwOpts import dimension, product\n",
+    "from vw_pipeline.handlers import WidgetHandler\n",
+    "from vw_pipeline.vw_cache import VwCache\n",
+    "from vw_pipeline.vw import Vw\n",
+    "from vw_pipeline.vw_opts import dimension, product\n",
     "import pandas as pd\n",
     "\n",
     "#your vw path\n",
-    "vw_path = r'/bin/vw'\n",
+    "vw_path = r'vw'\n",
     "\n",
     "cache = VwCache(r'_cache1')\n",
     "vw = Vw(vw_path,\n",
     "    cache,\n",
-    "    handlers=[Handlers.WidgetHandler()],\n",
+    "    handlers=[WidgetHandler()],\n",
     " #   loggers=[Loggers.ConsoleLogger('DEBUG')]\n",
     "    )"
    ]
@@ -66,9 +70,8 @@
    "outputs": [],
    "source": [
     "inputs = [\n",
-    "    r'cb-1.json',\n",
-    "    r'cb-2.json',\n",
-    "#    r'C:\\data\\cb\\3.json',\n",
+    "    #'file1.json',\n",
+    "    #'file2.json',\n",
     "    ]\n",
     "inputs"
    ]
@@ -134,7 +137,7 @@
    "outputs": [],
    "source": [
     "opts = pd.DataFrame(product(\n",
-    "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume']),\n",
+    "    dimension('#base', ['--ccb_explore_adf -P 100 --preserve_performance_counters --save_resume']),\n",
     "    dimension('--cb_type', ['ips', 'mtr']),\n",
     "    dimension('#format', ['', '--dsjson'])\n",
     "))\n",
@@ -193,13 +196,6 @@
     "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
