--- a/from_mwt_ds/DataScience/sweep_local.ipynb
+++ b/from_mwt_ds/DataScience/sweep_local.ipynb
@@ -10,11 +10,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
+   "name": "python38564bitc1b2a52ab4774b1892b2d6901d9c26f2",
    "display_name": "Python 3.8.5 64-bit",
    "language": "python"
   }
@@ -35,21 +35,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from VwPipeline import Loggers, Handlers\n",
-    "from VwPipeline.VwCache import VwCache\n",
-    "from VwPipeline.Vw import Vw\n",
-    "from VwPipeline.VwOpts import dimension, product\n",
+    "from vw_pipeline.handlers import WidgetHandler\n",
+    "from vw_pipeline.vw_cache import VwCache\n",
+    "from vw_pipeline.vw import Vw\n",
+    "from vw_pipeline.vw_opts import dimension, product\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "#your vw path\n",
-    "vw_path = r'/bin/vw'\n",
+    "vw_path = r'vw'\n",
     "\n",
     "#path to local folder to keep intermediate results\n",
     "cache = VwCache(r'_cache')\n",
     "\n",
     "vw = Vw(vw_path,\n",
     "    cache,\n",
-    "    handlers=[Handlers.WidgetHandler()],\n",
+    "    handlers=[WidgetHandler()],\n",
     "#    loggers=[Loggers.ConsoleLogger('DEBUG')]\n",
     "    )"
    ]
@@ -68,8 +69,8 @@
    "outputs": [],
    "source": [
     "inputs = [\n",
-    "    r'cb-1.json',\n",
-    "    r'cb-2.json'\n",
+    "    #'file1.json',\n",
+    "    #'file2.json',\n",
     "    ]\n",
     "inputs"
    ]
@@ -88,7 +89,7 @@
    "outputs": [],
    "source": [
     "opts = pd.DataFrame(product(\n",
-    "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume --dsjson']),\n",
+    "    dimension('#base', ['--ccb_explore_adf -P 100 --preserve_performance_counters --save_resume --dsjson']),\n",
     "    dimension('--cb_type', ['ips', 'mtr']),\n",
     "))\n",
     "opts"
