Vw interface simplification

--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
-   "display_name": "Python 3.8.6 64-bit"
+   "name": "python385jvsc74a57bd0fcc4d9e2a8350f4b426fa88136c80c744ccaacb1fcccdec649c503ae8c1bacf1",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "metadata": {
    "interpreter": {
@@ -39,21 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vw_pipeline.handlers import WidgetHandler\n",
-    "from vw_pipeline.vw_cache import VwCache\n",
     "from vw_pipeline.vw import Vw\n",
-    "from vw_pipeline.vw_opts import dimension, product\n",
-    "import pandas as pd\n",
     "\n",
-    "#your vw path\n",
-    "vw_path = r'vw'\n",
-    "\n",
-    "cache = VwCache(r'_cache1')\n",
-    "vw = Vw(vw_path,\n",
-    "    cache,\n",
-    "    handlers=[WidgetHandler()],\n",
-    " #   loggers=[Loggers.ConsoleLogger('DEBUG')]\n",
-    "    )"
+    "vw = Vw('vw', '.vw_cache')"
    ]
   },
   {
@@ -89,6 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from vw_pipeline.vw_opts import dimension, product\n",
+    "import pandas as pd\n",
+    "\n",
     "opts = product(\n",
     "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume --dsjson']),\n",
     "    dimension('--cb_type', ['ips', 'mtr']),\n",
@@ -102,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = vw.train(inputs, opts)\n",
+    "result = vw._with(reset=True).train(inputs, opts)\n",
     "result"
    ]
   },
@@ -196,6 +187,13 @@
     "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
