vw_pipeline -> vw_executor

--- a/from_mwt_ds/DataScience/sweep_local.ipynb
+++ b/from_mwt_ds/DataScience/sweep_local.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vw_pipeline.vw import Vw\n",
+    "from vw_executor.vw import Vw\n",
     "\n",
     "vw = Vw('vw', '.vw_cache')"
    ]
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "from vw_pipeline.vw_opts import dimension, product\n",
+    "from vw_executor.vw_opts import dimension, product\n",
     "import pandas as pd\n",
     "\n",
     "opts = pd.DataFrame(product(\n",
