estimate example cleanup

--- a/from_mwt_ds/DataScience/estimate.ipynb
+++ b/from_mwt_ds/DataScience/estimate.ipynb
@@ -5,12 +5,12 @@
    "id": "prescribed-belize",
    "metadata": {},
    "source": [
-    "# CB (minimalistic example)"
+    "# Contextual Bandits data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "industrial-satellite",
+   "id": "closing-plaza",
    "metadata": {},
    "source": [
     "## Load data"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atomic-lincoln",
+   "id": "congressional-birthday",
    "metadata": {},
    "source": [
     "## Apply estimators"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developed-replacement",
+   "id": "animated-longitude",
    "metadata": {},
    "source": [
     "## Visualize"
@@ -73,17 +73,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "italian-scenario",
+   "id": "seventh-filling",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.apply(lambda r: r['random'].get('snips'), axis=1).plot()\n",
-    "df.apply(lambda r: r['baseline1'].get('snips'), axis=1).plot()"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df.apply(lambda r: r['random'].get('snips'), axis=1).plot(label='random')\n",
+    "df.apply(lambda r: r['baseline1'].get('snips'), axis=1).plot(label='baseline1')\n",
+    "\n",
+    "plt.legend(loc='best')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "faced-pension",
+   "id": "wound-wagner",
    "metadata": {},
    "source": [
     "## Reaggregate (if needed)"
@@ -92,16 +96,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "manual-paradise",
+   "id": "exposed-retail",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.resample('10min').sum()"
+    "df = df.resample('10min').sum()\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sealed-reset",
+   "id": "patent-engineering",
    "metadata": {},
    "source": [
     "## Visualize"
@@ -110,39 +115,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "average-embassy",
+   "id": "radical-nightmare",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.apply(lambda r: r['random'].get('snips'), axis=1).plot()\n",
-    "df.apply(lambda r: r['baseline1'].get('snips'), axis=1).plot()"
+    "df.apply(lambda r: r['random'].get('snips'), axis=1).plot(label='random')\n",
+    "df.apply(lambda r: r['baseline1'].get('snips'), axis=1).plot(label='baseline1')\n",
+    "\n",
+    "plt.legend(loc='best')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "documented-tennis",
+   "id": "medieval-priority",
    "metadata": {},
    "source": [
-    "# CCB"
+    "# Conditional Contextual Bandits"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "earlier-catering",
+   "id": "available-patent",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_pickle(r'test_data\\ccb\\02.pickle')\n",
+    "df = pd.read_pickle(r'test_data\\ccb\\01.pickle')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bulgarian-painting",
+   "id": "bottom-student",
    "metadata": {},
    "outputs": [],
    "source": []
