--- a/from_mwt_ds/DataScience/estimate.ipynb
+++ b/from_mwt_ds/DataScience/estimate.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_pickle(r'test_data\\cb\\01.pickle')\n",
+    "df = pd.read_csv(r'test_data/cb/01.csv', parse_dates=['t']).set_index('t')\n",
     "df.head()"
    ]
   },
@@ -56,7 +56,7 @@
     "\n",
     "policies = ['random', 'baseline1']\n",
     "for p in policies:\n",
-    "    df[p] = df.apply(lambda r: init_ips_snips(r['r'], r[('b', p)], r['p'], r['n']), axis = 1)\n",
+    "    df[p] = df.apply(lambda r: init_ips_snips(r['r'], r[f\"('b', '{p}')\"], r['p'], r['n']), axis = 1)\n",
     "\n",
     "df = df[policies].resample('5min').sum()\n",
     "df"
@@ -157,9 +157,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python38564bitc1b2a52ab4774b1892b2d6901d9c26f2",
+   "display_name": "Python 3.8.8 64-bit ('python@3.8')"
   },
   "language_info": {
    "codemirror_mode": {
@@ -171,7 +170,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "1ee38ef4a5a9feb55287fd749643f13d043cb0a7addaab2a9c224cbe137c0062"
+   }
   }
  },
  "nbformat": 4,
