Fix source directory for cb

--- a/from_mwt_ds/DataScience/estimate-notebook-one-node.ipynb
+++ b/from_mwt_ds/DataScience/estimate-notebook-one-node.ipynb
@@ -55,9 +55,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import shutil, os\n",
     "source_directory = 'script-run'\n",
-    "import os\n",
-    "os.makedirs(source_directory, exist_ok=True)"
+    "shutil.rmtree(source_directory)\n",
+    "os.makedirs(source_directory, exist_ok=True)\n",
+    "shutil.copytree('cb', os.path.join(source_directory, 'cb'))"
    ]
   },
   {
