--- a/from_mwt_ds/DataScience/estimate-notebook-parallel.ipynb
+++ b/from_mwt_ds/DataScience/estimate-notebook-parallel.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9d1269f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3c6305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "294d384e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8539b073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +91,10 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(os.path.join(mounted_input_path, '01.csv'), parse_dates=['t']).set_index('t')\n",
+    "if MPI.COMM_WORLD.Get_rank() == 0:\n",
+    "    df = pd.read_csv(os.path.join(mounted_input_path, '01.csv'), parse_dates=['t']).set_index('t')\n",
+    "elif MPI.COMM_WORLD.Get_rank() == 1:\n",
+    "    df = pd.read_csv(os.path.join(mounted_input_path, '02.csv'), parse_dates=['t']).set_index('t')\n",
     "\n",
     "from cb.estimators import ips_snips\n",
     "\n",
@@ -117,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbfd6b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73122b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78649057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7ed140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f4a889e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752741ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
