Remove cluster name

--- a/from_mwt_ds/DataScience/estimate-notebook-one-node.ipynb
+++ b/from_mwt_ds/DataScience/estimate-notebook-one-node.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46195604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f2e293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +26,7 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "# choose a name for your cluster\n",
-    "cluster_name = \"rlos-cfe-cluster\"\n",
+    "cluster_name = \"\"\n",
     "\n",
     "try:\n",
     "    compute_target = ComputeTarget(workspace=ws, name=cluster_name)\n",
@@ -51,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "297bbf96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +62,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad6d83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e656df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "086e53be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d76d22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f03a28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6faa478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +182,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd76da8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87402d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
