--- a/from_mwt_ds/DataScience/estimate-notebook-parallel.ipynb
+++ b/from_mwt_ds/DataScience/estimate-notebook-parallel.ipynb
@@ -26,7 +26,7 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "# choose a name for your cluster\n",
-    "cluster_name = \"rlos-cfe-cluster\"\n",
+    "cluster_name = \"\"\n",
     "\n",
     "try:\n",
     "    compute_target = ComputeTarget(workspace=ws, name=cluster_name)\n",
