Add even odd function

--- a/from_mwt_ds/DataScience/estimate-bucket-parallel-notebook.ipynb
+++ b/from_mwt_ds/DataScience/estimate-bucket-parallel-notebook.ipynb
@@ -55,9 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Use simple script\n",
-    "# CP script-run\n",
-    "# cb to script-run\n",
     "import shutil, os\n",
     "source_directory = 'script-run'\n",
     "shutil.rmtree(source_directory)\n",
@@ -68,22 +65,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a55d727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from os import listdir\n",
+    "import pandas as pd\n",
+    "\n",
+    "even = []\n",
+    "odd = [] \n",
+    "\n",
+    "import os\n",
+    "arr = os.listdir(source_directory + \"/\" + \"cb/test_data/cb/\")\n",
+    "print(len(arr))\n",
+    "for _ in range(0, len(arr)):\n",
+    "    if _ % 2 == 0:\n",
+    "        even.append(arr[_])\n",
+    "    else:\n",
+    "        odd.append(arr[_])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8a7b8ffa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile $source_directory/estimate.py\n",
-    "\n",
-    "# %%run $source_directory/hello.py\n",
-    "\n",
+    "%%writefile $source_directory/setup_mpi.py\n",
     "# Copyright (c) Microsoft Corporation. All rights reserved.\n",
     "# Licensed under the MIT License.\n",
     "import sys\n",
     "import os\n",
     "from mpi4py import MPI\n",
-    "\n",
-    "print(\"*********************************************************\")\n",
-    "print(\"Hello Azure ML!\")\n",
     "\n",
     "mounted_input_path = sys.argv[1]\n",
     "mounted_output_path = sys.argv[2]\n",
@@ -96,9 +111,10 @@
     "import pandas as pd\n",
     "\n",
     "if MPI.COMM_WORLD.Get_rank() == 0:\n",
-    "    df = pd.read_csv(os.path.join(mounted_input_path, '01.csv'), parse_dates=['t']).set_index('t')\n",
+    "    df = pd.read_csv(os.path.join(mounted_input_path, [even]), parse_dates=['t']).set_index('t')\n",
     "elif MPI.COMM_WORLD.Get_rank() == 1:\n",
-    "    df = pd.read_csv(os.path.join(mounted_input_path, '02.csv'), parse_dates=['t']).set_index('t')"
+    "    df = pd.read_csv(os.path.join(mounted_input_path, [odd]), parse_dates=['t']).set_index('t')\n",
+    "    "
    ]
   },
   {
@@ -114,7 +130,7 @@
     "for p in sys.path:\n",
     "    print(p)\n",
     "print(sys.path)\n",
-    "def_blob_store.upload_files(files = [\"test_data/cb/01.csv\", \"test_data/cb/02.csv\"],\n",
+    "def_blob_store.upload_files(files = [\"test_data/cb/01.csv\", \"test_data/cb/02.csv\", \"test_data/cb/03.csv\",\"test_data/cb/04.csv\"],\n",
     "                        target_path = '/dataset/cb/',\n",
     "                       overwrite = True,\n",
     "                       show_progress = True)"
