Fix estimate bucket parallel notebook

--- a/from_mwt_ds/DataScience/estimate-bucket-parallel-notebook.ipynb
+++ b/from_mwt_ds/DataScience/estimate-bucket-parallel-notebook.ipynb
@@ -65,30 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a55d727",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from os import listdir\n",
-    "import pandas as pd\n",
-    "\n",
-    "even = []\n",
-    "odd = [] \n",
-    "\n",
-    "import os\n",
-    "arr = os.listdir(source_directory + \"/\" + \"cb/test_data/cb/\")\n",
-    "print(len(arr))\n",
-    "for _ in range(0, len(arr)):\n",
-    "    if _ % 2 == 0:\n",
-    "        even.append(arr[_])\n",
-    "    else:\n",
-    "        odd.append(arr[_])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8a7b8ffa",
    "metadata": {},
    "outputs": [],
@@ -99,6 +75,7 @@
     "import sys\n",
     "import os\n",
     "from mpi4py import MPI\n",
+    "import pandas as pd\n",
     "\n",
     "mounted_input_path = sys.argv[1]\n",
     "mounted_output_path = sys.argv[2]\n",
@@ -108,13 +85,31 @@
     "print(\"Number of nodes {}:\".format(MPI.COMM_WORLD.Get_size()))\n",
     "print(\"Node index {}:\".format(MPI.COMM_WORLD.Get_rank()))\n",
     "\n",
-    "import pandas as pd\n",
+    "even = []\n",
+    "odd = [] \n",
     "\n",
+    "input_file_list = os.listdir(mounted_input_path)\n",
+    "print(\"File number: {}\".format(len(input_file_list)))\n",
+    "for index in range(0, len(input_file_list)):\n",
+    "    if index % 2 == 0:\n",
+    "        even.append(input_file_list[index])\n",
+    "        print(\"read in {} file\".format(input_file_list[index]))\n",
+    "    else:\n",
+    "        odd.append(input_file_list[index])\n",
+    "        print(\"read in {} file\".format(input_file_list[index]))\n",
+    "print(even, odd)\n",
+    " \n",
+    "config = {\n",
+    "   'policies': {'random': ['ips', 'snips'], 'baseline1': ['ips']},\n",
+    "   'aggregation': {'num_of_events': 10}\n",
+    "}\n",
+    "\n",
+    "input_files = []\n",
     "if MPI.COMM_WORLD.Get_rank() == 0:\n",
-    "    df = pd.read_csv(os.path.join(mounted_input_path, [even]), parse_dates=['t']).set_index('t')\n",
+    "    input_files = odd\n",
     "elif MPI.COMM_WORLD.Get_rank() == 1:\n",
-    "    df = pd.read_csv(os.path.join(mounted_input_path, [odd]), parse_dates=['t']).set_index('t')\n",
-    "    "
+    "    input_files = even\n",
+    "# estimate(input_files, config)"
    ]
   },
   {
@@ -180,7 +175,7 @@
     "from azureml.core.runconfig import MpiConfiguration\n",
     "\n",
     "src = ScriptRunConfig(source_directory=source_directory, \n",
-    "                      script='estimate-bucket.py', \n",
+    "                      script='setup_mpi.py', \n",
     "                      # to mount the dataset on the remote compute and pass the mounted path as an argument to the training script\n",
     "                      arguments =[input_data, output],\n",
     "                      compute_target=compute_target,\n",
