Add estimate notebook

--- a/from_mwt_ds/DataScience/estimate.ipynb
+++ b/from_mwt_ds/DataScience/estimate.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "df3807a3",
    "metadata": {},
    "source": [
     "# Contextual Bandits data"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d178d90",
    "metadata": {},
    "source": [
     "## Load data"
@@ -16,9 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "572875c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'estimate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-36d7f9b24450>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mestimate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mestimate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0misfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0minput_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"test_data/cb\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'estimate'"
+     ]
+    }
+   ],
    "source": [
     "from estimate import estimate\n",
     "import os\n",
@@ -36,6 +51,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8accf8c",
    "metadata": {},
    "source": [
     "## Apply estimators"
@@ -44,6 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "54fd2e4a",
    "metadata": {
     "scrolled": true
    },
@@ -60,6 +77,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0cade94",
    "metadata": {},
    "source": [
     "## Visualize"
@@ -68,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3153a077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e15b9a8c",
    "metadata": {},
    "source": [
     "## Reaggregate (if needed)"
@@ -92,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "76c9414d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +122,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a238709",
    "metadata": {},
    "source": [
     "## Visualize"
@@ -109,6 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5f9cf073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "70fedd43",
    "metadata": {},
    "source": [
     "# Conditional Contextual Bandits"
@@ -128,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "669c905c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2031d68b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -161,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "metadata": {
    "interpreter": {
