Updated estimate notebook

--- a/from_mwt_ds/DataScience/estimate.ipynb
+++ b/from_mwt_ds/DataScience/estimate.ipynb
@@ -18,35 +18,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "572875c3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'estimate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-36d7f9b24450>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mestimate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mestimate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0misfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0minput_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"test_data/cb\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'estimate'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from estimate import estimate\n",
     "import os\n",
     "from os.path import isfile, join\n",
     "\n",
     "input_dir = \"test_data/cb\"\n",
-    "input_files = [join(input_dir, f) for f in os.listdir(input_dir) if isfile(join(input_dir, f))]\n",
+    "input_files = [join(input_dir, f) for f in os.listdir(input_dir) if (isfile(join(input_dir, f)) and f.endswith(\".csv\"))]\n",
     "output_dir=\"test_data/aggregated\"\n",
     "config = {\n",
     "   'policies': {'random': ['snips'], 'baseline1': ['ips']},\n",
     "   'aggregation': {'num_of_events': 10}\n",
     "}\n",
     "estimate(input_files, config, output_path=output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dd357b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "def plot_estimate(df: pd.DataFrame):\n",
+    "    for index in range(1, len(df.columns)):\n",
+    "        estimate = df[df.columns[index]]\n",
+    "        plt.plot(estimate, \"-o\", label=df.columns.values[index])"
    ]
   },
   {
@@ -58,26 +61,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54fd2e4a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "def plot_estimate_chunk(chunk: pd.DataFrame):\n",
-    "#     fig, ax = plt.subplots()\n",
-    "    for index in range(1, len(chunk.columns)):\n",
-    "        estimate = chunk[chunk.columns[index]]\n",
-    "        plt.plot(estimate, \"-o\", label=chunk.columns.values[index])"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "e0cade94",
+   "id": "6fbac6ad",
    "metadata": {},
    "source": [
     "## Visualize"
@@ -86,8 +71,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3153a077",
-   "metadata": {},
+   "id": "54fd2e4a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -95,15 +82,15 @@
     "df = pd.DataFrame()\n",
     "for file in output_files:\n",
     "    chunk = pd.read_csv(file)\n",
-    "    df.append(chunk, ignore_index = True)\n",
-    "plot_estimate_chunk(chunk)\n",
+    "    df = df.append(chunk, ignore_index = True)\n",
+    "plot_estimate(df)\n",
     "plt.legend(loc=\"upper left\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e15b9a8c",
+   "id": "e0cade94",
    "metadata": {},
    "source": [
     "## Reaggregate (if needed)"
@@ -112,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76c9414d",
+   "id": "3153a077",
    "metadata": {},
    "outputs": [],
    "source": [
